# Backfill-GA4-to-BigQuery

./: .gitignore  GA4_tables_backfill.ipynb  README.md  backfill-ga4.py  pyproject.toml
